tests/neg/16463.check
-- Error: tests/neg/16463.scala:42:33 ----------------------------------------------------------------------------------
42 |  println(compiletime.constValue[TupleOps.BubbleSort[(1, 2)]]) // error: Recursion limit exceeded
   |                                 ^
   |                 Recursion limit exceeded.
   |                 Maybe there is an illegal cyclic reference?
   |                 If that's not the case, you could also try to increase the stacksize using the -Xss JVM option.
   |                 For the unprocessed stack trace, compile with -Yno-decode-stacktraces.
   |                 A recurring operation is (inner to outer):
   |
   |                   reduce type  EmptyTuple *: EmptyTuple match ...
   |                   reduce type  EmptyTuple *: EmptyTuple match ...
   |                   reduce type  EmptyTuple *: EmptyTuple match ...
   |                   reduce type  EmptyTuple *: EmptyTuple match ...
   |                   reduce type  EmptyTuple *: EmptyTuple match ...
   |                   reduce type  EmptyTuple *: EmptyTuple match ...
   |                   reduce type  EmptyTuple *: EmptyTuple match ...
   |                   reduce type  EmptyTuple *: EmptyTuple match ...
   |                   reduce type  EmptyTuple *: EmptyTuple match ...
   |                   reduce type  EmptyTuple *: EmptyTuple match ...
   |                   ...
   |
   |                   reduce type  EmptyTuple *: EmptyTuple match ...
   |                   reduce type  EmptyTuple *: EmptyTuple match ...
   |                   reduce type  EmptyTuple *: EmptyTuple match ...
   |                   reduce type  EmptyTuple *: EmptyTuple match ...
   |                   reduce type  EmptyTuple *: EmptyTuple match ...
   |                   reduce type  EmptyTuple *: EmptyTuple match ...
   |                   reduce type  EmptyTuple *: EmptyTuple match ...
   |                   reduce type  EmptyTuple *: EmptyTuple match ...
   |                   reduce type  ((1 : Int) *: EmptyTuple.type) *: EmptyTuple match ...
   |                   reduce type  ((1 : Int), (2 : Int)) match ...
